--- a/styles.css
+++ b/styles.css
@@ -80,13 +80,12 @@ body {
   color: var(--button-text-light);
   border: none;
   border-radius: 50%;
-  padding: 15px;
+  padding: 10px;
   cursor: pointer;
-  font-size: 24px;
+  font-size: 18px;
   position: fixed;
   right: 20px;
-  top: 50%;
-  transform: translateY(-50%);
+  bottom: 20px;
   transition: background-color 0.3s, transform 0.3s;
   z-index: 1000;
 }
@@ -94,7 +93,7 @@ body {
 .theme-toggle:hover {
   background-color: var(--button-bg-dark);
   color: var(--button-text-dark);
-  transform: translateY(-50%) scale(1.1);
+  transform: scale(1.1);
 }
 
 .dark-mode {
